// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add to a React element (JSX) 1`] = `
<div>
  <div>
    Some element
  </div>
  <Shadow />
</div>
`;

exports[`Add to an element 1`] = `
<div>
  <div>
    Some element
  </div>
  <Shadow />
</div>
`;

exports[`Child node 1`] = `
<div
  className="pe-shadow  "
>
  Child
  <div
    className="pe-shadow__bottom pe-shadow--z-1"
    key="bottom"
  />
  <div
    className="pe-shadow__top pe-shadow--z-1"
    key="top"
  />
</div>
`;

exports[`Interactive option: animated -- dark tone class 1`] = `
<div>
  <div
    className="absolute absolute--fill"
    onClick={[Function]}
  >
    Click me
  </div>
  <Shadow
    animated={true}
    z={1}
  />
</div>
`;

exports[`No options 1`] = `
<div
  className="pe-shadow  "
>
  <div
    className="pe-shadow__bottom pe-shadow--z-1"
    key="bottom"
  />
  <div
    className="pe-shadow__top pe-shadow--z-1"
    key="top"
  />
</div>
`;

exports[`Option: class 1`] = `
<div
  className="pe-shadow  class-x"
>
  <div
    className="pe-shadow__bottom pe-shadow--z-1"
    key="bottom"
  />
  <div
    className="pe-shadow__top pe-shadow--z-1"
    key="top"
  />
</div>
`;

exports[`Option: className 1`] = `
<div
  className="pe-shadow  className-x"
>
  <div
    className="pe-shadow__bottom pe-shadow--z-1"
    key="bottom"
  />
  <div
    className="pe-shadow__top pe-shadow--z-1"
    key="top"
  />
</div>
`;

exports[`Option: content 1`] = `
<div
  className="pe-shadow  "
>
  <span
    key="content"
  >
    Content
  </span>
  <div
    className="pe-shadow__bottom pe-shadow--z-1"
    key="bottom"
  />
  <div
    className="pe-shadow__top pe-shadow--z-1"
    key="top"
  />
</div>
`;

exports[`Option: content 2`] = `
<div
  className="pe-shadow  "
>
  Content
  <div
    className="pe-shadow__bottom pe-shadow--z-1"
    key="bottom"
  />
  <div
    className="pe-shadow__top pe-shadow--z-1"
    key="top"
  />
</div>
`;

exports[`Option: element 1`] = `
<span
  className="pe-shadow  "
>
  <div
    className="pe-shadow__bottom pe-shadow--z-1"
    key="bottom"
  />
  <div
    className="pe-shadow__top pe-shadow--z-1"
    key="top"
  />
</span>
`;

exports[`Option: id 1`] = `
<div
  className="pe-shadow  "
  id="id-x"
>
  <div
    className="pe-shadow__bottom pe-shadow--z-1"
    key="bottom"
  />
  <div
    className="pe-shadow__top pe-shadow--z-1"
    key="top"
  />
</div>
`;

exports[`Option: z (0) 1`] = `
<div
  className="pe-shadow  "
>
  <div
    className="pe-shadow__bottom pe-shadow--z-0"
    key="bottom"
  />
  <div
    className="pe-shadow__top pe-shadow--z-0"
    key="top"
  />
</div>
`;

exports[`Option: z (1) 1`] = `
<div
  className="pe-shadow  "
>
  <div
    className="pe-shadow__bottom pe-shadow--z-1"
    key="bottom"
  />
  <div
    className="pe-shadow__top pe-shadow--z-1"
    key="top"
  />
</div>
`;

exports[`Option: z (2) 1`] = `
<div
  className="pe-shadow  "
>
  <div
    className="pe-shadow__bottom pe-shadow--z-2"
    key="bottom"
  />
  <div
    className="pe-shadow__top pe-shadow--z-2"
    key="top"
  />
</div>
`;

exports[`Option: z (3) 1`] = `
<div
  className="pe-shadow  "
>
  <div
    className="pe-shadow__bottom pe-shadow--z-3"
    key="bottom"
  />
  <div
    className="pe-shadow__top pe-shadow--z-3"
    key="top"
  />
</div>
`;

exports[`Option: z (4) 1`] = `
<div
  className="pe-shadow  "
>
  <div
    className="pe-shadow__bottom pe-shadow--z-4"
    key="bottom"
  />
  <div
    className="pe-shadow__top pe-shadow--z-4"
    key="top"
  />
</div>
`;

exports[`Option: z (5) 1`] = `
<div
  className="pe-shadow  "
>
  <div
    className="pe-shadow__bottom pe-shadow--z-5"
    key="bottom"
  />
  <div
    className="pe-shadow__top pe-shadow--z-5"
    key="top"
  />
</div>
`;
